fixed slight overlap on index.html

--- a/home.css
+++ b/home.css
@@ -43,7 +43,7 @@ h3{font-weight: bold;}
 /* Product 1 Styles */
 
 #Photo1 img{
-  margin: 20px;
+  padding: 20px;
   max-height: 400px;
   max-width: 100%;
   height:auto;
